--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Cualquier texto
             </h1>
+            <h2>
+                texto secundario
+            </h2>
         </div>
     </body>
 </html>
